--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/fatassbudha/handlebars#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "express-myconnection": "",
+    "mysql": "^2.12.0"
   }
 }
